[gd_scene load_steps=9 format=3 uid="uid://cebmnkttr8urf"]

[ext_resource type="Texture2D" uid="uid://bk3ggjp5ym4uf" path="res://images/sprites/table.png" id="1_h48rn"]
[ext_resource type="Script" path="res://scripts/entities/entDestroyObjective.gd" id="1_wy7sq"]
[ext_resource type="PackedScene" uid="uid://ldtj4j0l61ow" path="res://scenes/components/Hurtbox.tscn" id="2_u8m1n"]
[ext_resource type="Script" path="res://scripts/hurtbox/hrtDestructibleObjective.gd" id="3_hvrux"]
[ext_resource type="Theme" uid="uid://ciwndxc6pxrp1" path="res://design/InvertedBar.tres" id="5_736hq"]
[ext_resource type="Theme" uid="uid://yo85ef7wg3gc" path="res://design/OutlinedLabel.tres" id="5_aldhm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4xwbb"]
radius = 16.5
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i8pln"]
radius = 40.0

[node name="DestroyObjective" type="CharacterBody2D"]
script = ExtResource("1_wy7sq")

[node name="HurtBoxComponent" parent="." instance=ExtResource("2_u8m1n")]
HIT_SCRIPT = ExtResource("3_hvrux")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(0, -24)
texture = ExtResource("1_h48rn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4xwbb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_i8pln")
debug_color = Color(0.843137, 0.360784, 0.309804, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = -36.0
theme = ExtResource("5_736hq")
value = 25.0
fill_mode = 1
show_percentage = false

[node name="Label" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_top = -8.0
offset_right = 56.0
offset_bottom = 5.0
theme = ExtResource("5_aldhm")
text = "Destroying!"

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
